# mess

./: Cargo.toml  README.md  test.sh
data/: schema.sql
mess-algos/: Cargo.toml
mess-algos/src/: noise.rs
mess-algos/src/coding/: parity.rs  repetition3.rs  repetition5.rs
mess-algos/src/compression/: mod.rs  rle.rs
mess-algos/src/methods/: download_file.rs  get_updates.rs  login.rs
mess-algos/src/types/: compression.rs  downloaded_file.rs  online.rs  update.rs
mess-client/: Cargo.toml
mess-client/src/: app.rs  imports.rs  logo.rs  logo1.txt  logo2.txt  main.rs  mode.rs
mess-client/src/gui/control/: mod.rs  text_field.rs
mess-client/src/gui/view/: status_bar.rs
mess-server/: Cargo.toml
mess-server/src/: main.rs
mess-server/src/server/: mod.rs
mess-server/src/server/methods/: download_file.rs  get_online.rs  get_updates.rs  login.rs
mess-stats/: .gitignore  Cargo.toml  README.md
mess-stats/data/: schema.sql
mess-stats/paradigms/: Loaner.md
mess-stats/src/: db.rs  main.rs
src/: app.rs  client.rs  connection.rs  db.rs  error.rs  huffman.rs  imports.rs  lib.rs  main.rs  mode.rs  noise.rs  parity.rs  repetition3.rs  repetition5.rs  rle.rs
src/coding/: hamming.rs  mod.rs  repetition3.rs  repetition5.rs
src/compression/: huffman.rs  mod.rs  rle.rs  shannon.rs
src/gui/: _mvc.rs  mod.rs
src/gui/control/: mod.rs  text_field.rs
src/gui/view/: line_edit.rs  mod.rs  status_bar.rs
src/methods/: download_file.rs  get_online.rs  get_updates.rs  login.rs  mod.rs  online.rs  send_file.rs  send_text.rs  upload_file.rs
src/server/methods/: download_file.rs  mod.rs  send_file.rs  send_text.rs  upload_file.rs
src/types/: coding.rs  data.rs  file_id.rs  file_meta.rs  login_result.rs  mod.rs  online.rs  update.rs  updates.rs  user.rs
