[package]
name = "mess-stats"
version = "0.1.0"
authors = ["ivan tkachenko <ratijas@users.noreply.github.com>"]

[dependencies]
bit-vec = "0.4.4"

rusqlite = "0.12.0"
mime_guess = "1"

# multithreading
threadpool = "1"
num_cpus = "1"

[dependencies.mime]
version = ">=0.1, <0.3"

[dependencies.rand]
version = "0.3"

[dependencies.algos]
path = "../mess-algos"