[package]
name = "client"
version = "0.1.0"
authors = ["valeev-aidar <ai.valeev@innopolis.ru>", "ratijas <gmail@ratijas.tk>"]

[dependencies]
# network
reqwest = "0.8"

# serde
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
base64 = "0.7.0"

# GUI
termion = "1.4.0"

[dependencies.tui]
version = "0.1.3"
default-features = false
features = ['termion']

# algos
[dependencies.rand]
version = "0.3"
[dependencies.algos]
path = "../mess-algos"
