[package]
name = "algos"
version = "0.1.0"
authors = ["ivan tkachenko <ratijas@users.noreply.github.com>"]

[dependencies]
# log
log = "0.3"

# bits
bit-vec = "0.4.4"
rand = "0.3"
void = "1"

# network
reqwest = { version = "0.10", features = ["blocking", "json"] }

# serde
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
base64 = "0.7.0"
