[package]
name = "mess-client"
version = "0.1.0"
authors = ["valeev-aidar <ai.valeev@innopolis.ru>", "ivan tkachenko <me@ratijas.tk>"]

[dependencies]
bit-vec = "0.4.4"

# network
reqwest = { version = "0.10", features = ["blocking", "json"] }

# serde
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
base64 = "0.7.0"
mime_guess = "1"

# algos
mess-algos = { path = "../mess-algos" }
rand = "0.3"

# GUI
termion = "1.4.0"

[dependencies.tui]
version = "0.1.3"
default-features = false
features = ['termion']
