[package]
name = "mess-stats"
version = "0.1.0"
authors = ["ivan tkachenko <me@ratijas.tk>"]

[dependencies]
lazy_static = "1"
bit-vec = "0.4.4"

rusqlite = "0.22.0"
mime_guess = "1"
mime = ">=0.1, <0.3"

# multithreading
threadpool = "1"
num_cpus = "1"

rand = "0.3"
mess-algos = { path = "../mess-algos" }
